# linux-0.11-notes

./: CMakeLists.txt  Makefile
boot/: bootsect.s  head.s  setup.s
fs/: exec.c  fcntl.c  inode.c  namei.c  open.c  super.c
include/: const.h  ctype.h  stdarg.h  unistd.h  utime.h
include/asm/: segment.h  system.h
include/linux/: fs.h  kernel.h  sched.h  sys.h
init/: main.c
kernel/: exit.c  fork.c  panic.c  sched.c  signal.c  sys.c  system_call.s  traps.c  vsprintf.c
lib/: _exit.c  ctype.c  errno.c  open.c  wait.c
tools/: build.c
